--- a/main/index.html
+++ b/main/index.html
@@ -27,6 +27,14 @@
       <div id="promptResult"></div>
     </div>
 
+    <img src="images/task2.png" alt="task2">
+    <br>
+    <div id="task2Form">
+        <label for="sizeInput">size:</label>
+        <input id="sizeInput" type="number"><br>
+        <button type="button" id="task2FormBtn">task2</button>
+    </div>
+
     <script type="module" src="js/app.js"></script>
 
 </body>
